objects/AAKCS__Error_Log__c.object
<CustomObject>
    <description>Should any system errors be detected, then they will be logged here.  Workflows will alert system administrators of these errors for actioning.</description>
    <label>Campaign Status Error Log</label>
    <nameField>
        <displayFormat>EL{0000000}</displayFormat>
        <label>Error Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign Status Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>AAKCS__Status__c</fullName>
        <inlineHelpText>Use the status to indicate the current situation with this error.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Working</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AAKCS__Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AAKCS__Description__c</fullName>
        <inlineHelpText>Error returned from Class/Method</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AAKCS__Program_Area__c</fullName>
        <inlineHelpText>Class/Method where the error was initiated from.</inlineHelpText>
        <label>Program Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>